// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GroupSelect all selected 1`] = `
<div
  className="select group-select select--is-multi css-1xz6ynz-container"
  onKeyDown={[Function]}
>
  <div
    className="group-select--has-value select__control select__control--menu-is-open css-yk16xz-control"
    onMouseDown={[Function]}
    onTouchEnd={[Function]}
  >
    <div
      className="select__value-container select__value-container--is-multi select__value-container--has-value css-1hwfws3"
    >
      <div
        className="group-select__label"
      >
        Select...
      </div>
      <input
        className="css-62g3xt-dummyInput"
        disabled={false}
        id="react-select-3-input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        readOnly={true}
        tabIndex="0"
        value=""
      />
    </div>
    <div
      className="select__indicators css-1wy0on6"
    >
      <span
        className="select__indicator-separator css-1okebmr-indicatorSeparator"
      />
      <div
        aria-hidden="true"
        className="select__indicator select__dropdown-indicator css-tlfecz-indicatorContainer"
        onMouseDown={[Function]}
        onTouchEnd={[Function]}
      >
        <svg
          aria-hidden="true"
          className="select__dropdown-arrow select__dropdown-arrow--down"
          color="inherit"
          focusable="false"
          height="1em"
          role="presentation"
          viewBox="0 0 10 5"
          width="1em"
        >
          <path
            d="M1 1.16134L4.92334 4.5"
            stroke="currentColor"
            strokeLinecap="round"
          />
          <path
            d="M8.82812 1.16134L5 4.5"
            stroke="currentColor"
            strokeLinecap="round"
          />
        </svg>
        <svg
          aria-hidden="true"
          className="select__dropdown-arrow select__dropdown-arrow--up"
          color="inherit"
          focusable="false"
          height="1em"
          role="presentation"
          viewBox="0 0 10 5"
          width="1em"
        >
          <path
            d="M1 3.83866L4.92334 0.5"
            stroke="currentColor"
            strokeLinecap="round"
          />
          <path
            d="M8.82812 3.83866L5 0.5"
            stroke="currentColor"
            strokeLinecap="round"
          />
        </svg>
      </div>
    </div>
  </div>
  <div
    className="select__menu css-26l3qy-menu"
    onMouseDown={[Function]}
    onMouseMove={[Function]}
  >
    <div
      className="select__menu-list select__menu-list--is-multi css-11unzgr"
    >
      <div
        className="group-select__options"
      >
        <div
          className="group-select__all group-select__option select__option"
          onClick={[Function]}
        >
          <div
            className="checkbox"
          />
          <div
            className="group-select__option-label"
          >
            Select All
          </div>
        </div>
        <div
          className="group-select__groups"
        >
          <div
            className="select__group css-1s9izoc"
          >
            <div
              className="select__group-heading css-18ng2q5-group"
              id="react-select-3-group-0-heading"
            >
              <div
                className="group-select__group group-select__option select__option"
                onClick={[Function]}
              >
                <div
                  className="checkbox"
                />
                <div
                  className="group-select__option-label"
                >
                  Group 1
                </div>
              </div>
            </div>
            <div>
              <div
                className="group-select__option select__option css-yt9ioa-option"
                id="react-select-3-option-0-0"
                onClick={[Function]}
                onMouseMove={[Function]}
                onMouseOver={[Function]}
                tabIndex={-1}
              >
                <div
                  className="checkbox"
                />
                <div
                  className="group-select__option-label"
                >
                  Option 1
                </div>
              </div>
              <div
                className="group-select__option select__option css-yt9ioa-option"
                id="react-select-3-option-0-1"
                onClick={[Function]}
                onMouseMove={[Function]}
                onMouseOver={[Function]}
                tabIndex={-1}
              >
                <div
                  className="checkbox"
                />
                <div
                  className="group-select__option-label"
                >
                  Option 2
                </div>
              </div>
              <div
                className="group-select__option select__option css-yt9ioa-option"
                id="react-select-3-option-0-2"
                onClick={[Function]}
                onMouseMove={[Function]}
                onMouseOver={[Function]}
                tabIndex={-1}
              >
                <div
                  className="checkbox"
                />
                <div
                  className="group-select__option-label"
                >
                  Option 3
                </div>
              </div>
              <div
                className="group-select__option select__option css-yt9ioa-option"
                id="react-select-3-option-0-3"
                onClick={[Function]}
                onMouseMove={[Function]}
                onMouseOver={[Function]}
                tabIndex={-1}
              >
                <div
                  className="checkbox"
                />
                <div
                  className="group-select__option-label"
                >
                  Option 4
                </div>
              </div>
            </div>
          </div>
          <div
            className="select__group css-1s9izoc"
          >
            <div
              className="select__group-heading css-18ng2q5-group"
              id="react-select-3-group-1-heading"
            >
              <div
                className="group-select__group group-select__option select__option"
                onClick={[Function]}
              >
                <div
                  className="checkbox"
                />
                <div
                  className="group-select__option-label"
                >
                  Group 2
                </div>
              </div>
            </div>
            <div>
              <div
                className="group-select__option select__option css-yt9ioa-option"
                id="react-select-3-option-1-0"
                onClick={[Function]}
                onMouseMove={[Function]}
                onMouseOver={[Function]}
                tabIndex={-1}
              >
                <div
                  className="checkbox"
                />
                <div
                  className="group-select__option-label"
                >
                  Option 5
                </div>
              </div>
              <div
                className="group-select__option select__option css-yt9ioa-option"
                id="react-select-3-option-1-1"
                onClick={[Function]}
                onMouseMove={[Function]}
                onMouseOver={[Function]}
                tabIndex={-1}
              >
                <div
                  className="checkbox"
                />
                <div
                  className="group-select__option-label"
                >
                  Option 6
                </div>
              </div>
              <div
                className="group-select__option select__option css-yt9ioa-option"
                id="react-select-3-option-1-2"
                onClick={[Function]}
                onMouseMove={[Function]}
                onMouseOver={[Function]}
                tabIndex={-1}
              >
                <div
                  className="checkbox"
                />
                <div
                  className="group-select__option-label"
                >
                  Option 7
                </div>
              </div>
              <div
                className="group-select__option select__option css-yt9ioa-option"
                id="react-select-3-option-1-3"
                onClick={[Function]}
                onMouseMove={[Function]}
                onMouseOver={[Function]}
                tabIndex={-1}
              >
                <div
                  className="checkbox"
                />
                <div
                  className="group-select__option-label"
                >
                  Option 8
                </div>
              </div>
            </div>
          </div>
          <div
            className="select__group css-1s9izoc"
          >
            <div
              className="select__group-heading css-18ng2q5-group"
              id="react-select-3-group-2-heading"
            >
              <div
                className="group-select__group group-select__option select__option"
                onClick={[Function]}
              >
                <div
                  className="checkbox"
                />
                <div
                  className="group-select__option-label"
                >
                  Group 3
                </div>
              </div>
            </div>
            <div>
              <div
                className="group-select__option select__option css-yt9ioa-option"
                id="react-select-3-option-2-0"
                onClick={[Function]}
                onMouseMove={[Function]}
                onMouseOver={[Function]}
                tabIndex={-1}
              >
                <div
                  className="checkbox"
                />
                <div
                  className="group-select__option-label"
                >
                  Option 9
                </div>
              </div>
              <div
                className="group-select__option select__option css-yt9ioa-option"
                id="react-select-3-option-2-1"
                onClick={[Function]}
                onMouseMove={[Function]}
                onMouseOver={[Function]}
                tabIndex={-1}
              >
                <div
                  className="checkbox"
                />
                <div
                  className="group-select__option-label"
                >
                  Option 10
                </div>
              </div>
              <div
                className="group-select__option select__option css-yt9ioa-option"
                id="react-select-3-option-2-2"
                onClick={[Function]}
                onMouseMove={[Function]}
                onMouseOver={[Function]}
                tabIndex={-1}
              >
                <div
                  className="checkbox"
                />
                <div
                  className="group-select__option-label"
                >
                  Option 11
                </div>
              </div>
              <div
                className="group-select__option select__option css-yt9ioa-option"
                id="react-select-3-option-2-3"
                onClick={[Function]}
                onMouseMove={[Function]}
                onMouseOver={[Function]}
                tabIndex={-1}
              >
                <div
                  className="checkbox"
                />
                <div
                  className="group-select__option-label"
                >
                  Option 12
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="group-select__controls"
      >
        <button
          className="button button--uppercase button--secondary group-select__button"
          onClick={[Function]}
        >
          reset
        </button>
        <button
          className="button button--uppercase button--primary multi-select__button"
          onClick={[Function]}
        >
          apply
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`GroupSelect render default 1`] = `
<div
  className="select group-select select--is-multi css-1xz6ynz-container"
  onKeyDown={[Function]}
>
  <div
    className="select__control css-yk16xz-control"
    onMouseDown={[Function]}
    onTouchEnd={[Function]}
  >
    <div
      className="select__value-container select__value-container--is-multi css-1hwfws3"
    >
      <div
        className="select__placeholder"
      >
        Select an option...
      </div>
      <input
        className="css-62g3xt-dummyInput"
        disabled={false}
        id="react-select-2-input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        readOnly={true}
        tabIndex="0"
        value=""
      />
    </div>
    <div
      className="select__indicators css-1wy0on6"
    >
      <span
        className="select__indicator-separator css-1okebmr-indicatorSeparator"
      />
      <div
        aria-hidden="true"
        className="select__indicator select__dropdown-indicator css-tlfecz-indicatorContainer"
        onMouseDown={[Function]}
        onTouchEnd={[Function]}
      >
        <svg
          aria-hidden="true"
          className="select__dropdown-arrow select__dropdown-arrow--down"
          color="inherit"
          focusable="false"
          height="1em"
          role="presentation"
          viewBox="0 0 10 5"
          width="1em"
        >
          <path
            d="M1 1.16134L4.92334 4.5"
            stroke="currentColor"
            strokeLinecap="round"
          />
          <path
            d="M8.82812 1.16134L5 4.5"
            stroke="currentColor"
            strokeLinecap="round"
          />
        </svg>
        <svg
          aria-hidden="true"
          className="select__dropdown-arrow select__dropdown-arrow--up"
          color="inherit"
          focusable="false"
          height="1em"
          role="presentation"
          viewBox="0 0 10 5"
          width="1em"
        >
          <path
            d="M1 3.83866L4.92334 0.5"
            stroke="currentColor"
            strokeLinecap="round"
          />
          <path
            d="M8.82812 3.83866L5 0.5"
            stroke="currentColor"
            strokeLinecap="round"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;
